<resources>
    <string name="app_name">Test</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="sudko">Sudko</string>
    <string name="sudoku">Sudoku</string>
    <string name="start">Start</string>
    <string name="test">TEST</string>
    <string name="textview">TextView</string>
</resources>