<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreenActivity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="198dp"
        android:layout_height="142dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:columnCount="3"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993">

        <Button
            android:id="@+id/button1"
            android:layout_width="61dp"
            android:layout_height="47dp"
            android:background="@drawable/rounded_corner_numbutton"
            android:text="@string/_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.906" />

        <Button
            android:id="@+id/button2"
            android:layout_width="61dp"
            android:layout_height="47dp"
            android:background="@drawable/rounded_corner_numbutton"
            android:text="@string/_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.22"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.907" />

        <Button
            android:id="@+id/button3"
            android:layout_width="61dp"
            android:layout_height="47dp"
            android:layout_row="0"
            android:layout_column="2"
            android:background="@drawable/rounded_corner_numbutton"
            android:text="@string/_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.394"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.906" />

        <Button
            android:id="@+id/button4"
            android:layout_width="61dp"
            android:layout_height="47dp"
            android:background="@drawable/rounded_corner_numbutton"
            android:text="@string/_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.568"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.906" />

        <Button
            android:id="@+id/button5"
            android:layout_width="61dp"
            android:layout_height="47dp"
            android:background="@drawable/rounded_corner_numbutton"
            android:text="@string/_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.742"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.906" />

        <Button
            android:id="@+id/button6"
            android:layout_width="61dp"
            android:layout_height="47dp"
            android:background="@drawable/rounded_corner_numbutton"
            android:text="@string/_6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />

        <Button
            android:id="@+id/button7"
            android:layout_width="61dp"
            android:layout_height="47dp"
            android:background="@drawable/rounded_corner_numbutton"
            android:text="@string/_7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.22"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />

        <Button
            android:id="@+id/button8"
            android:layout_width="61dp"
            android:layout_height="47dp"
            android:layout_row="2"
            android:layout_column="1"
            android:background="@drawable/rounded_corner_numbutton"
            android:text="@string/_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.394"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />

        <Button
            android:id="@+id/button9"
            android:layout_width="61dp"
            android:layout_height="47dp"
            android:background="@drawable/rounded_corner_numbutton"
            android:text="@string/_9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.568"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />

    </GridLayout>

    <com.example.SudokuApp.SudokuBoardView
        android:id="@+id/sudokuBoardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />

    <ImageButton
        android:id="@+id/del_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/delete_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.734"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/note_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/note_pen_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/next_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/menu_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958"
        tools:ignore="VectorDrawableCompat" />


</androidx.constraintlayout.widget.ConstraintLayout>